# shopping-simulator

./: .gitignore  README.md  playground.ipynb  playground2.ipynb  pyproject.toml  requirements.txt  simulator.py  tutorial.ipynb
shoppingsimulator/: profile.py  simulator.py
src/shopping_simulator/: models.py  profile.py  simulator.py
