[project]
name = "shopping-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "scipy>=1.14.1",
    "ipykernel>=6.29.5",
    "ruff>=0.6.2",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
